--- a/src/components/BookingModal/BookingModal.module.scss
+++ b/src/components/BookingModal/BookingModal.module.scss
@@ -9,7 +9,7 @@
   align-items: center;
   justify-content: center;
   padding: $spacing-4;
-  z-index: 1000;
+  z-index: $z-modal;  // 500
 }
 
 .modal {
